--- a/admin-contact.html
+++ b/admin-contact.html
@@ -3,7 +3,9 @@
   <style>
     #admin-contact { font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Noto Sans JP",sans-serif; color:#0f172a; }
     #admin-contact * { box-sizing:border-box; }
-    #admin-contact .card { background:#fff; border:1px solid #e2e8f0; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,.08); }
+    #admin-contact .card { background:#fff; border:1px solid #e2e8f0; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,.08); width: 90%;
+  max-width: 1000px;
+  margin: 0 auto;}
     #admin-contact .head { padding:10px 14px; border-bottom:1px solid #e2e8f0; display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap; gap:10px; }
     #admin-contact .filters { display:flex; flex-wrap:wrap; gap:8px; margin:6px 0; }
     #admin-contact .filters select, #admin-contact .filters input { padding:6px 10px; border-radius:8px; border:1px solid #d1d5db; }
